fixed spacing

--- a/style.css
+++ b/style.css
@@ -355,7 +355,7 @@ nav {
 
   .about-col-2 {
     margin-top: 30px;
-    flex-basis: 100%;
+    margin-left: 30px;
   }
 
   .nav-list {
@@ -373,8 +373,18 @@ nav {
     height: auto;
   }
 
-  #about {
+  div #about {
     padding-top: 0;
+  }
+
+  .work {
+    width: 360px;
+    height: 240px;
+  }
+
+  .work img {
+    width: 100%;
+    height: 100%;
   }
 
   .sub-title {
@@ -385,12 +395,15 @@ nav {
   .row {
 
     justify-content: center;
+
   }
 
 
 
   .desc-text {
     font-size: 15px;
+    margin-right: 25px;
+    text-align: justify;
   }
 
   i {
